--- a/src/scss/pages/_portfolio.scss
+++ b/src/scss/pages/_portfolio.scss
@@ -8,68 +8,100 @@
   flex-direction: column;
 }
 
-%portfolio__content {
+.portfolio__content {
   display: flex;
   height: 100%;
   justify-content: space-between;
-  padding-top: 1rem;
+  @include media-breakpoint-down(sm) {
+    flex-direction: column;
+  }
 }
-
-.portfolio__content--frontend {
-  @extend %portfolio__content;
-}
-
-.portfolio__content--design {
-  @extend %portfolio__content;
-}
-
 
 .portfolio__list {
-  width: 66%;
-  padding-left: 1%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  align-content: flex-start;
+  @include media-breakpoint-up(md) {
+    width: 65%;
+  }
+  @include media-breakpoint-down(sm) {
+    order: 1;
+  }
 }
 
 .portfolio__content__title {
   width: 100%;
   padding-bottom: 1.2rem;
-  padding-top: 1.2rem;
+  text-align: center;
+}
+
+.portfolio__content__footer {
+  width: 100%;
+  padding-top: 2.5rem;
+  text-align: center;
+  @include media-breakpoint-down(sm) {
+    padding-top: 3rem;
+  }
+  @include media-breakpoint-only(sm) {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+}
+
+.portfolio__content__title-line {
+  @include media-breakpoint-up(md) {
+    display: block;
+  }
 }
 
 .portfolio__list__project {
   border: none;
-  box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.10);
+  box-shadow: 0 0 8px 0 rgba(0,0,0,0.10);
   width: 32.3%;
-  padding: 18.5% 0 0 0;
+  padding: 19.2% 0 0 0;
   background: white;
   margin-bottom: 1.6%;
   position: relative;
-  font-size: 1.2rem;
   &:hover {
+    & .portfolio__list__project-type {
+      opacity: 1;
+    }
+  }
+  @include media-breakpoint-only(xs) {
+    width: 49%;
+    margin-bottom: 2.1%;
+    padding: 25% 0 0 0;
   }
 }
 
 .portfolio__list__project-name {
   position: absolute;
   left: 50%;
-  top: 66%;
+  top: 100%;
   width: 100%;
-  transform: translate(-50%, -50%);
-  font-family: Arial;
-  font-size: 1.1rem;
+  transform: translate(-50%, -5rem);
+  font-family: $font-family-arial;
+  font-size: 1.2rem;
   color: $gray;
+  @include media-breakpoint-down(sm) {
+    top: 18vw;
+    font-size: 2vw;
+  }
 }
 
 .portfolio__list__project-type {
+  display: flex;
   position: absolute;
-  bottom: 0.3rem;
-  right: 4%;
-  color: $gray-opacity5;
-  text-align: center;
-  font-size: 1.1rem;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: $brand-secondary-op9;
+  opacity: 0;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+  transition: opacity 0.3s;
 }
 
 .portfolio__list__project-img {
@@ -79,21 +111,87 @@
   transform: translate(-50%, -50%);
 }
 
-.portfolio__list__project-img--with-name {
-  @extend .portfolio__list__project-img;
-  top: 41%;
+.portfolio__list__project-img--bk {
+  width: 29%;
+  max-width: 55px;
 }
 
-.portfolio__header__img-wrapper {
-  height: 33rem;
+.portfolio__list__project-img--foodora {
+  width: 38%;
+  max-width: 73px;
 }
+
+.portfolio__list__project-img--vendomo {
+  width: 56%;
+  max-width: 108px;
+}
+
+.portfolio__list__project-img--timvision {
+  width: 57%;
+  max-width: 109px;
+}
+
+.portfolio__list__project-img--cubomusica {
+  width: 60%;
+  max-width: 116px;
+}
+
+.portfolio__list__project-img--lab {
+  width: 50%;
+  max-width: 96px;
+}
+
+.portfolio__list__project-img--ipo {
+  width: 48%;
+  max-width: 92px;
+}
+
+.portfolio__list__project-img--cbrn {
+  width: 59%;
+  max-width: 114px;
+}
+
+.portfolio__list__project-img--eusec {
+  width: 53%;
+  max-width: 103px;
+}
+
+.portfolio__list__project-img--milena {
+  width: 46%;
+  max-width: 89px;
+}
+
+.portfolio__list__project-img--davide {
+  width: 31%;
+  max-width: 60px;
+}
+
+.portfolio__list__project-img--pandora {
+  width: 59%;
+  max-width: 114px;
+}
+
 
 .portfolio__header {
-  width: 30%;
   text-align: center;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  // TODO optimise the breakpoint declarations
+  @include media-breakpoint-up(md) {
+    width: 32%;
+    flex-direction: column;
+    padding-top: 10%;
+  }
+  @include media-breakpoint-down(sm) {
+    margin-top: 6vw;
+    margin-bottom: 5vw;
+  }
+  @include media-breakpoint-only(sm) {
+    margin-top: 0;
+    margin-bottom: 1vw;
+  }
+  @include media-breakpoint-only(xs) {
+    display: block;
+  }
 }
 
 .portfolio__nav__button {
@@ -101,45 +199,49 @@
 }
 
 
-%portfolio__header__img {
-  width: 100%;
+.portfolio__header__img-wrapper {
+  @include media-breakpoint-up(md) {
+    height: 33rem;
+  }
+  @include media-breakpoint-only(sm) {
+    width: 40%;
+  }
+}
+
+.portfolio__header__img {
+  width: 95%;
   margin-top: 2rem;
-}
-
-.portfolio__header__img--frontend {
-  @extend %portfolio__header__img;
   max-width: 280px;
-}
-
-.portfolio__header__img--design {
-  @extend %portfolio__header__img;
-  max-width: 300px;
+  @include media-breakpoint-only(sm) {
+    margin-top: 1vw;
+  }
 }
 
 .portfolio__header__title {
   color: $brand-secondary;
+  @include media-breakpoint-only(sm) {
+    font-size: 5.3vw;
+  }
 }
 
-// bootstrap overrides
-
-.tab-content > .active {
-  display: flex;
+.portfolio__header__subtitle {
+  @include media-breakpoint-only(sm) {
+    font-size: 3.2vw;
+  }
 }
 
-.nav-tabs {
-  border-bottom: 1px solid $brand-primary;
+.portfolio__header__title-wrapper {
+  @include media-breakpoint-only(sm) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 60%;
+  }
 }
 
-.nav-tabs .nav-link {
-  padding: 0.5rem 2.6rem;
-  border: none !important;
-}
-
-.nav-tabs .nav-link.active, .nav-tabs .nav-link.active:focus, .nav-tabs .nav-link.active:hover, .nav-tabs .nav-item.open .nav-link, .nav-tabs .nav-item.open .nav-link:focus, .nav-tabs .nav-item.open .nav-link:hover {
-  color: $brand-secondary;
-  background-color: transparent;
-}
-
-.nav-tabs .nav-item + .nav-item {
-  margin-left: 0;
+.portfolio__old-projects-button {
+  @include make-button();
+  padding: 0;
+  display: block;
+  margin: auto;
 }
