--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -183,9 +183,9 @@ $font-size-xs:   1rem;
 //
 //$line-height-base: 1.5 !default;
 //
-$font-size-h1: 2.1rem;
-$font-size-h2: 1.8rem;
-$font-size-h3: 1.4rem;
+$font-size-h1: 2.4rem;
+$font-size-h2: 2rem;
+$font-size-h3: 1.8rem;
 $font-size-h4: 1.4rem;
 $font-size-h5: 1.4rem;
 $font-size-h6: 1.4rem;
@@ -201,7 +201,7 @@ $font-size-h6: 1.4rem;
 //$display4-weight: 300 !default;
 //
 $headings-margin-bottom: $spacer;
-$headings-font-family:   $font-family-portmanteau;
+$headings-font-family:   $font-family-amatic;
 $headings-font-weight:   normal;
 //$headings-line-height:   1.1 !default;
 //$headings-color:         inherit !default;
