--- a/src/scss/pages/_common.scss
+++ b/src/scss/pages/_common.scss
@@ -89,6 +89,11 @@ h1, .h1 {
   margin-bottom: 0;
 }
 
+h2, .h2 {
+  font-family: $font-family-she-always-walks-alone;
+  margin-bottom: 0;
+}
+
 // base styles end --------------------------------
 
 
@@ -135,36 +140,45 @@ h1, .h1 {
 
 .article-title-img {
   width: 100%;
-  margin-bottom: 30px;
 }
 
 
 .article-title-img-wrapper {
   width: 100%;
   max-width: 300px;
+  margin-bottom: 6rem;
 }
 
 #intro {
   @extend %article-wrapper;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+
 
   & .article-header {
     z-index: 1;
     position: absolute;
-    background: radial-gradient(closest-side at 50% 50%, #eeece6, transparent);
+    background-color: transparent;
     width: 100%;
     right: 0;
   }
 
   & .article-title-wrapper {
-    width: 37%;
-  }
-
-  & .article-title-wrapper {
-    width: 37%;
+    width: 27%;
   }
 
   & .article-title-img-wrapper {
-    max-width: 350px;
+    max-width: 400px;
+  }
+
+
+  h2, .h2 {
+    font-family: $font-family-work-sans-thin;
+    font-size: 3.6rem;
+    line-height: 1.2;
   }
 }
 
@@ -182,65 +196,93 @@ h1, .h1 {
   background-size: cover;
 }
 
-#intro-code {
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
-  font-size: 24px;
-  color: rgba(255,255,255,0.5);
-  text-align: left;
-  line-height: 1;
-  padding: 40px;
-}
+//#intro-code {
+//  z-index: 1;
+//  position: absolute;
+//  top: 0;
+//  left: 0;
+//  width: 50%;
+//  font-size: 24px;
+//  color: rgba(255,255,255,0.5);
+//  text-align: left;
+//  line-height: 1;
+//  padding: 40px;
+//}
 
 #skills {
   @extend %article-wrapper;
+  margin-top: 100vh;
 
   & .article-header {
-    background-color: #eee;
+    background-color: #F3DB5F;
   }
 
   & .article-body {
-    background-color: rgba(0,0,0,0.80);
+    background-color: rgba(255,255,255,0.70);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: white;
-    font-family: $font-family-work-sans-thin;
+    color: black;
+  }
+
+  & .article-title-wrapper {
+    width: 33%;
+  }
+
+  & .article-title-img-wrapper {
+    max-width: 250px;
   }
 
   & figure {
     margin-bottom: 5rem;
+    position: relative;
   }
 
-
-  & span {
-    color: rgba(255,255,255,0.3);
+  & figcaption {
+    text-align: center;
   }
 
   & p {
     margin-bottom: 0;
   }
 
+  & span {
+    color: rgba(0,0,0,0.3);
+  }
 }
 
 #skills-list-img {
   width: 100%;
   max-width: 450px;
+  margin-bottom: 5rem;
+
+  & path {
+    animation-name: rotating;
+    transform-origin: 50% 50%;
+  }
+}
+
+#skills-cogwheels {
+  @extend #skills-list-img;
+  display: block;
+  position: absolute;
+  top: 0;
 }
 
 #portfolio {
   @extend %article-wrapper;
+
+  & .article-header {
+    background-color: #fff;
+  }
 }
 
 #experience {
   @extend %article-wrapper;
 
   & .article-header {
-    background-color: #eee;
+    background-color: #f67065;
   }
 
   & .article-title-img {
@@ -252,6 +294,10 @@ h1, .h1 {
 
 #contact {
   @extend %article-wrapper;
+
+  & .article-header {
+    background-color: #9bceb3;
+  }
 
   & .article-title-img-wrapper {
     max-width: 350px;
@@ -417,3 +463,28 @@ h1, .h1 {
 }
 
 // side bar end --------------------------------
+
+
+@keyframes rotating {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+.rotating {
+  -webkit-animation: rotating 2s linear infinite;
+  -moz-animation: rotating 2s linear infinite;
+  -ms-animation: rotating 2s linear infinite;
+  -o-animation: rotating 2s linear infinite;
+  animation: rotating 2s linear infinite;
+}
